--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -6,8 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: stylelint
+      - name: stylelint-github-pr-check
         uses: reviewdog/action-stylelint@v1
         with:
           github_token: ${{ secrets.github_token }}
           stylelint_config: 'stylelint-config-recommended'
+      - name: stylelint-github-pr-review
+        uses: reviewdog/action-stylelint@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
