--- a/action.yml
+++ b/action.yml
@@ -18,10 +18,7 @@ inputs:
     description: "Files or glob. Default: `**/*.css`.  It's same as `[input]` of stylelint."
     default: '**/*.css'
   stylelint_config:
-    description: |
-      It's same as `--config` flag of stylelint. You can use
-      `stylelint-config-recommended`/`stylelint-config-standard` as a shared
-      configuration if your project doens't have stylelintrc."
+    description: "It's same as `--config` flag of stylelint."
 runs:
   using: 'docker'
   image: 'Dockerfile'
