Support github-check reporter

--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ inputs:
     default: 'error'
   reporter:
     description: |
-      Reporter of reviewdog command [github-pr-check,github-pr-review].
+      Reporter of reviewdog command [github-pr-check,github-pr-review,github-check].
       Default is github-pr-check.
       github-pr-review can use Markdown and add a link to rule page in reviewdog reports.
     default: 'github-pr-check'
