--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,9 @@ inputs:
     description: "It's same as `--config` flag of stylelint."
   stylelint_ignore:
     description: "Files or glob. It's the same as `--ignore-pattern` of stylelint"
+  workdir:
+    description: "The directory from which to look for and run stylelint. Default: '.'"
+    default: '.'
 runs:
   using: 'docker'
   image: 'Dockerfile'
