--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
+      - name: stylelint-github-pr-check-subproject
+        uses: ./
+        with:
+          github_token: ${{ secrets.github_token }}
+          stylelint_config: 'stylelint-config-recommended'
+          workdir: ./testdata-subproject
       - name: stylelint-github-check-subproject
         uses: ./
         with:
