--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   level:
     description: 'Report level for reviewdog [info,warning,error]'
     default: 'error'
-  filter-mode:
+  filter_mode:
     description: 'Reviewdog filter mode [added, diff_context, file, nofilter]'
     default: 'added'
   name:
