--- a/action.yml
+++ b/action.yml
@@ -38,8 +38,23 @@ inputs:
     description: "The directory from which to look for and run stylelint. Default: '.'"
     default: '.'
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: 'composite'
+  steps:
+    - run: $GITHUB_ACTION_PATH/script.sh
+      shell: bash
+      env:
+        REVIEWDOG_VERSION: v0.14.0
+        INPUT_GITHUB_TOKEN: ${{ inputs.github_token }}
+        INPUT_LEVEL: ${{ inputs.level }}
+        INPUT_FAIL_ON_ERROR: ${{ inputs.fail_on_error }}
+        INPUT_FILTER_MODE: ${{ inputs.filter_mode }}
+        INPUT_NAME: ${{ inputs.name }}
+        INPUT_PACKAGES: ${{ inputs.packages }}
+        INPUT_REPORTER: ${{ inputs.reporter }}
+        INPUT_STYLELINT_INPUT: ${{ inputs.stylelint_input }}
+        INPUT_STYLELINT_CONFIG: ${{ inputs.stylelint_config }}
+        INPUT_STYLELINT_IGNORE: ${{ inputs.stylelint_ignore }}
+        INPUT_WORKDIR: ${{ inputs.workdir }}
 branding:
   icon: 'alert-triangle'
   color: 'yellow'
